--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.javamoney.moneta</groupId>
+            <groupId>org.javaMoney.moneta</groupId>
             <artifactId>moneta-core</artifactId>
             <version>1.4.2</version>
         </dependency>
